Aggiunge il plugin JavaFX e disabilita la configuration cache
La configuration cache, abilitata di default da 'gradle init' nel file gradle.properties, è stata disattivata poiché causa conflitti di incompatibilità con il task di esecuzione del plugin JavaFX.